# pyrosmsg

./: .gitignore  CMakeLists.txt  LICENSE  package.xml  readme.md  setup.py
include/pymsg/: converters.hpp  serialization.h  serialization.hpp
include/pyrosmsg/: converters.hpp  pyrosmsg.h  serialization.hpp
pyrosmsg/: __init__.py
python/pymsg/: __init__.py
scratch/: sanity.py  serialization.py  unicheck.py
src_wrap/: module.cpp
